// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should show the component correctly with custom title 1`] = `
<span
  className="productDescription custom-class"
>
  Custom Product
</span>
`;

exports[`ProductTitle should show the component with product title in context 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription custom-class"
  >
    Coffee Mug One - Card
  </span>
</div>
`;
